keil.log
*** Using Compiler 'V6.22', folder: 'D:\ProgramFiles\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'rt-thread'
compiling cctype.c...
compiling SEGGER_RTT_printf.c...
compiling drv_hlw8032.c...
compiling sfud_port.c...
compiling syscall_mem.c...
compiling cstdlib.c...
compiling drv_rtt.c...
compiling drv_meter.c...
compiling dev_relay.c...
compiling syscalls.c...
compiling evse_main.c...
compiling drv_cd4051.c...
applications/evse_db.c(35): error: call to undeclared function 'rt_sfud_flash_probe'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   35 |     rt_sfud_flash_probe("gd25q32", "spi10");
      |     ^
applications/evse_db.c(48): error: incompatible function pointer types initializing 'const init_fn_t' (aka 'int (*const)(void)') with an expression of type 'void (void)' [-Wincompatible-function-pointer-types]
   48 | INIT_APP_EXPORT(evse_db_init);
      | ^               ~~~~~~~~~~~~
middleware/rt-thread/include\rtdef.h(198): note: expanded from macro 'INIT_APP_EXPORT'
  198 | #define INIT_APP_EXPORT(fn)             INIT_EXPORT(fn, "6")
      |                                         ^           ~~
middleware/rt-thread/include\rtdef.h(171): note: expanded from macro 'INIT_EXPORT'
  171 |             rt_used const init_fn_t __rt_init_##fn rt_section(".rti_fn." level) = fn
      |                                     ^                                             ~~
<scratch space>(16): note: expanded from here
   16 | __rt_init_evse_db_init
      | ^
2 errors generated.
compiling evse_db.c...
compiling dev_lock.c...
compiling cstring.c...
compiling evse_main_thread.c...
compiling SEGGER_RTT.c...
compiling cwchar.c...
compiling cunistd.c...
compiling ctime.c...
compiling device.c...
compiling completion_comm.c...
compiling completion_up.c...
compiling hwtimer.c...
compiling condvar.c...
compiling pipe.c...
compiling dataqueue.c...
compiling ringblk_buf.c...
assembling startup_gd32f450_470.s...
compiling adc.c...
compiling ringbuffer.c...
compiling waitqueue.c...
compiling dev_spi.c...
compiling dev_rtc.c...
compiling workqueue.c...
compiling dev_spi_core.c...
compiling dev_alarm.c...
compiling dev_pin.c...
compiling sfud_sfdp.c...
compiling dev_serial.c...
compiling board.c...
compiling dev_spi_flash_sfud.c...
compiling sfud.c...
compiling drv_gpio.c...
compiling drv_spi.c...
compiling drv_rtc.c...
compiling drv_timer.c...
compiling msh_parse.c...
compiling devfs.c...
compiling dfs_fs.c...
compiling fal.c...
compiling fal_flash.c...
compiling dfs_posix.c...
compiling dfs.c...
compiling drv_usart.c...
compiling fal_partition.c...
compiling dfs_file.c...
compiling fal_rtt.c...
compiling msh_file.c...
compiling shell.c...
compiling msh.c...
compiling cmd.c...
compiling kvdb_type_string_sample.c...
compiling kvdb_type_blob_sample.c...
compiling fdb_tsdb.c...
compiling cpu_up.c...
compiling components.c...
compiling defunct.c...
compiling clock.c...
compiling idle.c...
compiling tsdb_sample.c...
compiling fdb_file.c...
compiling kvdb_basic_sample.c...
compiling fdb_cmd.c...
compiling fdb_kvdb.c...
compiling fdb.c...
compiling irq.c...
compiling fdb_utils.c...
compiling mem.c...
compiling kservice.c...
compiling mempool.c...
compiling ipc.c...
compiling scheduler_comm.c...
compiling scheduler_up.c...
assembling context_rvds.S...
compiling kstdio.c...
compiling kerrno.c...
compiling div0.c...
compiling thread.c...
compiling object.c...
compiling showmem.c...
compiling timer.c...
compiling kstring.c...
compiling cpuport.c...
compiling rt_vsscanf.c...
compiling gd32f4xx_syscfg.c...
compiling gd32f4xx_spi.c...
compiling rt_vsnprintf_std.c...
compiling gd32f4xx_exti.c...
compiling gd32f4xx_misc.c...
compiling gd32f4xx_timer.c...
compiling console_be.c...
compiling gd32f4xx_pmu.c...
compiling gd32f4xx_gpio.c...
compiling gd32f4xx_usart.c...
compiling system_gd32f4xx.c...
compiling gd32f4xx_rcu.c...
compiling gd32f4xx_rtc.c...
compiling gd32f4xx_adc.c...
compiling gd32f4xx_dma.c...
compiling fal_flash_sfud_port.c...
compiling ulog.c...
".\build\rtthread.axf" - 2 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:07
